Bug 236788 - Kmail quite slow on launch
Summary: Kmail quite slow on launch
Status: VERIFIED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: HI normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
: 236783 (view as bug list)
Depends on:
Blocks: 223438
  Show dependency treegraph
 
Reported: 2010-05-07 23:49 UTC by Sabine Faure
Modified: 2010-05-17 20:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-05-07 23:49:38 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch Kmail
- Click on 'Lose Data' in the 'Unstable Development version of Kmail' dialogue
- the Kmail main window appears immediately but its Folder view is empty
- after a little while the 'Local Folders' appears as well as an empty Imap resource (22 seconds after launch Kmail)
- Then after a little while the first Imap resource's folders appear too
- And after another little while the second Imap resources and its folders appear too

Total time from launch to Imap resources display: 38 seconds

This is possibly a duplicated of bug #223459

Trunk, Svn Rev 1124075
Comment 1 Thomas McGuire 2010-05-08 14:00:28 UTC
Wow, over 30 seconds, that is certainly too slow.
Comment 2 Volker Krause 2010-05-14 23:17:26 UTC
SVN commit 1126784 by vkrause:

Don't write out kmailrc while reading the folder configuration, makes
KMail startup a lot faster.

BUG: 236788


 M  +1 -2      kmail/foldercollection.cpp  
 M  +1 -1      messagecore/mailinglist-magic.cpp  
 M  +1 -1      messagecore/mailinglist-magic.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1126784
Comment 3 Volker Krause 2010-05-14 23:24:31 UTC
*** Bug 236783 has been marked as a duplicate of this bug. ***
Comment 4 Sabine Faure 2010-05-17 20:48:53 UTC
It is corrected now.

Kmail is a lot quicker to launch now (9 seconds between clicking on the Kmail icon and seeing all the Imap resources and folders appear).

Trunk, Svn Rev 1127799