Don't write out kmailrc while reading the folder configuration, makes KMail startup a lot faster.

BUG: 236788

svn path=/trunk/KDE/kdepim/kmail/; revision=1126784